ZODB Requires:
~~~~~~~~~~~~~~
-

New features:
~~~~~~~~~~~~~
- Password widget uses a confirmation widget in edit mode.
-

Bug fixes:
~~~~~~~~~~
-

New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-